--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,17 @@
-sudo: false
 language: ruby
+sudo: false
+
+bundler_args: --without development doc
+
 rvm:
+  - 2.0
+  - 2.1
+  - 2.2
   - 2.3.1
+  - jruby-9.1.1.0
+
 before_install: gem install bundler -v 1.12.3
+
+branches:
+  only:
+    - master
