--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,13 +9,13 @@ keywords    = ["hashing", "authenticity", "Merkle", "blockchain"]
 license     = "Apache-2.0"
 authors     = ["Tony Arcieri <bascule@gmail.com>"]
 
-# [dependencies.ring]
-# optional = true
-# git = "https://github.com/briansmith/ring"
+[dependencies.ring]
+optional = true
+git = "https://github.com/briansmith/ring"
 
 [dev-dependencies.rustc-serialize]
 version = ">= 0.3.19"
 
 [features]
 default = []
-objecthash-ring = [] # ["ring"]
+objecthash-ring = ["ring"]
