Make objecthash-ring a default feature

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,5 +20,5 @@ git = "https://github.com/briansmith/ring"
 version = ">= 0.3.19"
 
 [features]
-default = []
+default = ["objecthash-ring"]
 objecthash-ring = ["ring"]
