--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ version = ">= 0.1.2"
 
 [dependencies.ring]
 optional = true
-git = "https://github.com/briansmith/ring"
+version = ">= 0.2"
 
 [dev-dependencies.rustc-serialize]
 version = ">= 0.3.19"
