--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name        = "objecthash"
-version     = "0.3.0"
+version     = "0.4.0"
 description = "A content hashing algorithm which works across multiple encodings (JSON, Protobufs, etc)"
 homepage    = "https://github.com/cryptosphere/rust-objecthash"
 repository  = "https://github.com/cryptosphere/rust-objecthash"
 readme      = "README.md"
-keywords    = ["hashing", "authenticity", "Merkle", "blockchain"]
+keywords    = ["hash", "digest", "signatures", "Merkle", "blockchain"]
 license     = "Apache-2.0"
 authors     = ["Tony Arcieri <bascule@gmail.com>"]
 
