.travis.yml: Rust configuration

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,3 +16,8 @@ matrix:
     - cd ruby
     - bundle
     - bundle exec rake
+  - language: rust
+    rust: stable
+    script:
+    - cd rust
+    - cargo test
