--- a/.travis.yml
+++ b/.travis.yml
@@ -16,3 +16,11 @@ matrix:
     - cd ruby
     - bundle
     - bundle exec rake
+  - language: rust
+    rust:
+      - stable
+      - beta
+      - nightly
+    script:
+      - cd rust
+      - cargo test --verbose --all
