* Fixed java tests to pass same tests as go does * Fixed python tests to pass same tests as go does * Added pom files for convenient work with java version * Fixed tests to ignore first line of commonjson.test file * Removed java root from gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,28 @@
 *.swp
 *.so
 pkg/
-src/
 # made by sbt
 project/
 objecthash_test
+
+# OSX
+.DS_Store
+
+# IDE
+.idea
+*.iml
+
+# Maven
+.mvn
+
+*.class
+out/
+target/
+
+# Package Files #
+*.jar
+*.war
+*.ear
+*.zip
+*.tar.gz
+*.rar
