--- a/.travis.yml
+++ b/.travis.yml
@@ -16,3 +16,10 @@ matrix:
     - cd ruby
     - bundle
     - bundle exec rake
+  - language: java
+    jdk: openjdk8
+  - language: python
+    python:
+      - "2.7"
+    script:
+      - make python
